[tool.poetry]
name = "coolstudy"
version = "0.1.0"
description = ""
authors = ["Jett Wang <jamiesun.net@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pydantic = "^2.5.2"
python-dotenv = "^1.0.0"
tiktoken = "^0.5.2"
openai = "^1.5.0"
pymupdf = "^1.23.8"
langchain = "^0.0.351"
python-multipart = "^0.0.6"
pytesseract = "^0.3.10"
pillow = "^10.1.0"
graphviz = "^0.20.1"
jinja2 = "^3.1.2"
streamlit = "^1.29.0"
pydub = "^0.25.1"
sympy = "^1.12"
msal-streamlit-authentication = "^1.0.9"
opencv-python-headless = "^4.8.1.78"
streamlit-webrtc = "^0.47.1"
streamlit-audiorec = "^0.1.3"
audio-recorder-streamlit = "^0.0.8"
streamlit-camera-input-live = "^0.2.0"
qdrant-client = "^1.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
